[package]
name = "dlist"
version = "0.1.0"
edition = "2021"
include = [
  "src/**/*",
  "Cargo.toml", 
  "README.md",
  "LICENSE"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
clap = { version = "4.5.7", default= false, features = ["derive"] }
walkdir = "2"
file-size = "1"



