[package]
name = "toplist"
version = "0.1.1"
edition = "2021"
include = [
  "src/**/*",
  "Cargo.toml", 
  "README.md",
  "LICENSE"
]
homepage = "https://github.com/enosuity/dlist"
description = "A Simple Command line tool to get top directories with higher size"
repository = "https://github.com/enosuity/dlist"
keywords = [
  "cli",
  "directory", 
  "command-line",
  "directory-size",
  "heavy-size"
]
categories = ["command-line-interface"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
clap = { version = "4.5.7", default= false, features = ["derive"] }
walkdir = "2"
file-size = "1"



